<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A000000"
    android:gravity="center_horizontal|center_vertical"
    android:layout_gravity="center_horizontal|center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.indexer.hellotaxi.app.debug.LoginActivity">

  <TextView
      android:id="@+id/userPhoneView"
      android:layout_width="match_parent"
      android:text="@string/enterphonenumber"
      android:layout_marginBottom="5dp"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:layout_height="wrap_content"/>

  <EditText
      android:layout_below="@+id/userPhoneView"
      android:id="@+id/loginUserPhone"
      android:layout_width="match_parent"
      android:layout_marginBottom="5dp"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:hint="@string/loginPhone"
      android:inputType="phone"
      android:layout_height="wrap_content"/>

  <Button
      android:id="@+id/btnLogin"
      android:layout_marginBottom="5dp"
      android:textColor="@drawable/textcolor_selector"
      android:background="@drawable/button_book"
      android:layout_below="@+id/loginUserPhone"
      android:layout_width="match_parent"
      android:text="@string/login"
      android:textStyle="bold"
      android:layout_height="wrap_content"/>

  <CheckBox
      android:id="@+id/rememberLogin"
      android:layout_gravity="center"
      android:text="@string/rememberlogin"
      android:layout_below="@+id/btnLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

  <View
      android:layout_marginTop="5dp"
      android:id="@+id/header"
      android:layout_below="@+id/rememberLogin"
      android:layout_height="3dp"
      android:layout_width="match_parent"
      android:layout_marginBottom="5dp"
      android:background="?android:attr/listDivider"/>
  <TextView
      android:layout_below="@+id/header"
      android:textStyle="bold|italic"
      android:textColor="#5FAB5D"
      android:layout_width="match_parent"
      android:text="@string/register"
      android:textAppearance="?android:attr/textAppearanceSearchResultTitle"
      android:gravity="center"
      android:layout_height="wrap_content"/>


</RelativeLayout>



